--- a/templates/feed/search.html.twig
+++ b/templates/feed/search.html.twig
@@ -1,13 +1,11 @@
 {% extends 'layout/front.html.twig' %}
 
-{% block title %}Welcome to Blogly
+{% block title %}Search result
 {% endblock %}
 
 {% block content %}
-
-	{{ include('index/new_feed.html.twig') }}
-
-	{% for feed in feeds %}
+    <h3>Search result : </h3>
+	{% for feed in founded_feed %}
 		<div class="card mb-2">
 			<img src="{{ feed.image ? asset('uploads/images/' ~ feed.image) : asset('images/default-image.jpg') }}" class="card-img-top" alt="{{ feed.image }}" style="max-height: 300px; object-fit:cover;">
 			<div class="card-body">
