--- a/templates/layout/front.html.twig
+++ b/templates/layout/front.html.twig
@@ -30,7 +30,7 @@
 							&nbsp;Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link active" href="#">
+						<a class="nav-link active" href="{{ path('blogly_feed_pictures') }}">
 							<i class="bi bi-image"></i>
 							&nbsp;Images</a>
 					</li>
@@ -43,22 +43,24 @@
 							<span class="visually-hidden">unread messages</span>
 						</span>
 					</li>
-					<li class="nav-item position-relative">
-						<a class="nav-link active" href="{{ path('blogly_blog') }}">
-							<i class="bi bi-bell"></i>
-							&nbsp;Blog</a>
-						<span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-info">
-							{{ random(1, 20 )}}
-							<span class="visually-hidden">unread messages</span>
-						</span>
-					</li>
 				</ul>
 			</div>
-			<button class="btn">
-				<i class="bi bi-search"></i>
-			</button>
+
+			<form action="{{ path('blogly_feed_search') }}" method="GET">
+				<div class="input-group">
+					<input type="text" name="q" class="form-control rounded" placeholder="Search">
+					<button class="input-group-text btn">
+						<i class="bi bi-search"></i>
+					</button>
+				</div>
+			</form>
 		</div>
 	</nav>
+
+	{# NOTICE #}
+	{% for notice in app.flashes('notice') %}
+		<div class="container alert alert-{{ notice.type }} w-50 mt-3">{{ notice.message }}</div>
+	{% endfor %}
 
 	<main class="container mt-5">
 		<div class="row">
@@ -77,13 +79,6 @@
 				</div>
 			</div>
 			<div class="col-12 col-lg-2">
-				<ul class="list-group list-group-flush">
-					<li class="list-group-item">#An item</li>
-					<li class="list-group-item">#A second item</li>
-					<li class="list-group-item">#A third item</li>
-					<li class="list-group-item">#A fourth item</li>
-					<li class="list-group-item">#And a fifth one</li>
-				</ul>
 			</div>
 		</div>
 	</main>
